Regression: Crash when using extrude mesh geometry node #119239

Closed
opened 2024-03-09 07:59:59 +01:00 by Marcus-Ross · 0 comments

System Information
Operating system: Windows 11 Version 10.0.22631 Build 22631
Graphics card: NVIDIA 3080 Laptop GPU

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-09 00:52, hash: 76bf43f44d0c
Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-24 00:19, hash: 23430f4db868

Short description of error
Blender crash when attempting to use the extrude mesh node and the mesh has several attributes. Two attributes in the face corner domain and custom split normal data in particular crash blender when an extrude mesh node is added to the geonode setup.

Exact steps for others to reproduce the error
Open up attached .Blendfile and Unmute the "extrude mesh node"

To recreate from default setup.

  1. Select default cube.
  2. Add custom split normals in the Object Data properties > Geometry data section.
  3. Add Geometry nodes modifier.
  4. Add a store named attribute node inline with input/output with type set to "Vector", domain set to "Face corner", and a string in the "Name" box. I used "test".
  5. Add an "extrude mesh" node after the "store named attribute" node.
**System Information** Operating system: Windows 11 Version 10.0.22631 Build 22631 Graphics card: NVIDIA 3080 Laptop GPU **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-09 00:52, hash: `76bf43f44d0c` Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-24 00:19, hash: `23430f4db868` **Short description of error** Blender crash when attempting to use the extrude mesh node and the mesh has several attributes. Two attributes in the face corner domain and custom split normal data in particular crash blender when an extrude mesh node is added to the geonode setup. **Exact steps for others to reproduce the error** Open up attached .Blendfile and Unmute the "extrude mesh node" To recreate from default setup. 1. Select default cube. 2. Add custom split normals in the Object Data properties > Geometry data section. 3. Add Geometry nodes modifier. 4. Add a store named attribute node inline with input/output with type set to "Vector", domain set to "Face corner", and a string in the "Name" box. I used "test". 5. Add an "extrude mesh" node after the "store named attribute" node.
Marcus-Ross added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-09 08:00:00 +01:00
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2024-03-09 08:01:14 +01:00
Iliya Katushenock changed title from Crash when using extrude mesh geometry node to Regression: Crash when using extrude mesh geometry node 2024-03-09 08:01:21 +01:00
Iliya Katushenock added this to the 4.1 milestone 2024-03-09 08:52:35 +01:00
Iliya Katushenock self-assigned this 2024-03-09 09:33:40 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-12 16:42:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119239
No description provided.